--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,11 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
     "mysql2": "^3.11.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.24.2"
   }
 }
