--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js"
+    "start": "node script.js",
+    "build": "netlify deploy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,9 @@
     "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "drizzle-kit": "^0.24.2"
