--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js",
-    "build": "netlify deploy --prod"
+    "start": "node script.js"
   },
   "author": "",
   "license": "ISC",
