--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,7 @@
     "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
-    "mysql2": "^3.11.3",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "drizzle-kit": "^0.24.2"
